# Changelog #

##8.2.0 (2016-12-??)##
###New###
- Added unit tests for Helper.GetResolutionString()
- Core-Uproject updated to match native .Net functionality
- Restructorized Projects

###Fix###
 - Wrong default unknown string in ParserSettings


---


##8.1.0 (2016-11-27)##
###New###
- Added Methods to parse full directories
- Added Extension Methodes to parse full directories
- Unit tests for extension methodes now at 100% soft coverage

###Fix###
 - Exception in extension methodes
 - Property exception in ParserResult
 - Possible exception fixes in some new parsing functions


---


##8.0.0 (2016-11-26)##
###New###
- Fileextension handling changed: Default is now the global dot net default (with dot E.g.: m4v -> .m4v)
- Switches from single class to worker class (SeriesIDParser) and  result class (SeriesIDResult)
- Property IsMultiEpisode is now danymicaly computed
- Property ParserSettingsUsed are now available in the SeriesIDResult object
- Properties FullTitle, ParsedString and IDString are now cached to improve performance on multiple access
- UnitTests are now excluded from code coverage check
- UnitTests are now in multiple files and functions
- Parser properties refactored
- Extension methodes added
- Added a property for the year regex string

###Fix###
 - Possible Nullpointer on GetFileExtension()
 - Some code optimization


---


##7.0.0 (2016-10-16)##
###New###
- !! Now supporting .Net Core !!
- SeriesIDParserCore for .Net Core implementation
- Removed unused '[Serializable]' attribute from ParserSettings
- Removed unused app.config entries
- Removed 'Episode' (single)
- Added Console Demo for Core version
- Unit tests updated

###Fix###
 - 


---


##6.1.0 (2016-10-05)##
###New###
- Added ParserSettings Property ReleaseGroupSeperator
- Added SeriesID Property ReleaseGroup
- Added SeriesID Property Episodes
- Added SeriesID Property AudioCodec
- Added SeriesID Property VideoCodec
- Added partial class SeriesID-Properties
- Added class Helpers